[project]
name = "QMDown"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [
    {name = "Luren", email = "68656403+luren-dc@users.noreply.github.com"},
]
dependencies = ["typer>=0.13.0", "qqmusic-api-python>=0.1.10", "httpx>=0.27.2"]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
QMDown = "QMDown.cli:app"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["QMDown"]

[tool.pdm.version]
source = "file"
path = "QMDown/__init__.py"
