[project]
name = "QMDown"
dynamic = ["version"]
description = "QQ音乐解析/下载工具"
authors = [
    {name = "Luren", email = "68656403+luren-dc@users.noreply.github.com"},
]
dependencies = ["typer>=0.13.0", "qqmusic-api-python>=0.1.10", "httpx>=0.27.2", "pydantic>=2.10.1"]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
QMDown = "QMDown.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["QMDown"]

[tool.pdm.version]
source = "file"
path = "QMDown/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "UP", "I", "T"]
pydocstyle = { convention = "google" }
